<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single">
        <item android:id="@+id/navi_home"
            android:title="@string/navi_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/navi_favorite"
            android:title="@string/navi_favorite"
            android:icon="@drawable/ic_favorite"/>

        <item android:id="@+id/navi_draft"
            android:title="@string/navi_draft"
            android:icon="@drawable/ic_draft"/>

    </group>

    <item android:title="@string/navi_account">
        <menu>
            <item android:id="@+id/navi_my_profile"
                android:title="@string/navi_my_profile"
                android:icon="@drawable/ic_profile"/>

            <item android:id="@+id/navi_setting"
                android:title="@string/navi_setting"
                android:icon="@drawable/ic_settings"/>

            <item android:id="@+id/navi_sign_out"
                android:title="@string/navi_sign_out"
                android:icon="@drawable/ic_log_out"/>
        </menu>
    </item>
</menu>